[package]
name = "pdrsky_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.25"
regex = "1.7.0"
telegram-bot = "0.7"
tokio = { version = "0.2.22", features = ["macros"] }
